--- a/src/data/i18n/en.json
+++ b/src/data/i18n/en.json
@@ -3,5 +3,6 @@
   "UntranslatedSubtitle": "Sorry, this content has not been translated in English yet",
   "UntranslatedText": "Available in",
   "UntranslatedTextLang_en": "English",
-  "UntranslatedTextLang_it": "Italian"
+  "UntranslatedTextLang_it": "Italian",
+  "UntranslatedTextLang_nl": "Dutch"
 }
