--- a/src/content/settings/i18n/en.yml
+++ b/src/content/settings/i18n/en.yml
@@ -6,3 +6,4 @@ UntranslatedSubtitle: Sorry, this content has not been translated in English yet
 UntranslatedText: Available in
 UntranslatedTextLang_en: English
 UntranslatedTextLang_it: Italian
+404message: This page does not exists
