--- a/src/content/settings/i18n/it.yml
+++ b/src/content/settings/i18n/it.yml
@@ -6,3 +6,4 @@ UntranslatedSubtitle: Ci dispiace, questa pagina non è ancora stata tradotta in
 UntranslatedText: Disponibile in
 UntranslatedTextLang_en: inglese
 UntranslatedTextLang_it: italiano
+404message: Questa pagina non esiste
